# sensor-silo

./: .gitignore  README.md  cal.py  frame_streams.py  junk.py  pyproject.toml
src/calcrib/: __init__.py  calibration.py  coefficients.py  crib.py  equation.py  factory.py  parameter.py  polynomial.py  procedure.py  sensor.py  setpoint.py  shell.py  statistics.py  thermistor.py
src/examples/: cal.py  frame_streams.py
src/sensor_silo/: __init__.py  deploy.py  equation.py  factory.py  procedure.py  sensor.py  silo.py  statistics.py
