[project]
name = "calcrib"
version = "0.0.1"
authors = [
  { name="Coburn Wightman", email="coburnw@halfstop.top" },
]
description = "Python library/toolcrib for maintaining metadata and calibration data for a group of sensors"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
license = {text = "AGPL-3.0 License"}

[project.urls]
Homepage = "https://github.com/coburnw/python-cal-crib"
